--- a/views/mgmt.html
+++ b/views/mgmt.html
@@ -2,11 +2,12 @@
 <div id="" ng-class="{'drop-active': drop}">
   <div class="product-header mgmt">
     <div class="landing-text">MGMT Services</div>
+	<div class="landing-text-sub">Next Gen Site Development</div>
   </div>
   <div class="product-container">
     <div class="section intro">
       <div class="content">
-        The high paced, data intensive, and highly collaborative nature of wireless projects is exactly why we love managing them. We share our customers’ enthusiasm for their networks and are proud to be partners in their efforts to deliver outstanding service and connectivity. We’ve delivered exceptional results for companies small and large across the nation on some of the most challenging network deployments. We bring innovative approaches and tools paired with experience, professionalism, and dedication to every project.
+        New build to in building, overlay to backhaul, urban or remote, we've been a part of some of the coolest projects from Lihue to Long Island. Whatever your scope of work, if it involves getting a site from concept to on-air, we can help.
       </div>
     </div>
   </div>
@@ -14,25 +15,25 @@
     <div class="section">
       <div class="heading">MGMT Services</div>
       <div class="content">
-        <div style="">Project and Construction management for all phases of site development, from design, real estate, to final site acceptance we understand the challenges faced deploying advanced communications networks and we are prepared to go the distance necessary to achieve the best results possible.</div>
+        <div style="">We help our clients with project and construction management for site development programs on telecommunication network build-outs through all its phases. If you're looking for a unique, and innovative partner to bring something new to the process, then we can be of particular help. We can't solve all the problems inherent with large ambitious projects, but most of them can be with better data management, software, and great people.</div>
         <div class="feature-flex testing-intro-list">
           <div>
-            <div class="body">Coordination with RF, RE, and CX</div>
+            <div class="body">Coordination and management with RF, RE, and CX - all phases.</div>
           </div>
           <div>
-            <div class="body">Site Scoping</div>
+            <div class="body">Site scope and BOM development</div>
           </div>
           <div>
-            <div class="body">Material and Equipment Scoping</div>
+            <div class="body">Vendor sourcing and management</div>
           </div>
           <div>
-            <div class="body">Construction Management</div>
+            <div class="body">Project and construction mangement</div>
           </div>
           <div>
-            <div class="body">Technical and Construction Quality Assurance</div>
+            <div class="body">Technical and construction quality assurance</div>
           </div>
           <div>
-            <div class="body">Performance Analysis of teams and processes</div>
+            <div class="body">Workflow design and automation</div>
           </div>
         </div>
       </div>
@@ -43,8 +44,8 @@
       <div class="heading">Why Ontel?</div>
       <div class="content feature-flex">
         <div>
-          <div class="title">Experience</div>
-          <div class="body">Team-players with proven performance and professionalism</div>
+          <div class="title">We are here to help you make more money</div>
+          <div class="body">Decreased rejections, faster invoice acceptance, software, people, ideas, these are things your company can have at their disposal for fixed prices that are quoted up front when we work together</div>
         </div>
         <div>
           <div class="title">Ingenuity</div>
