--- a/views/mgmt.html
+++ b/views/mgmt.html
@@ -2,7 +2,7 @@
 <div id="" ng-class="{'drop-active': drop}">
   <div class="product-header mgmt">
     <div class="landing-text">MGMT Services</div>
-	<div class="landing-text-sub">Next Gen Site Development</div>
+	<div class="landing-text-sub">Telecommunication Site Development</div>
   </div>
   <div class="product-container">
     <div class="section intro">
@@ -18,7 +18,7 @@
         <div style="">We help our clients with project and construction management for site development programs on telecommunication network build-outs through all its phases. If you're looking for a unique, and innovative partner to bring something new to the process, then we can be of particular help. We can't solve all the problems inherent with large ambitious projects, but most of them can be with better data management, software, and great people.</div>
         <div class="feature-flex testing-intro-list">
           <div>
-            <div class="body">Coordination and management with RF, RE, and CX - all phases.</div>
+            <div class="body">Site Dev from RF, RE, and CX - all phases.</div>
           </div>
           <div>
             <div class="body">Site scope and BOM development</div>
