--- a/views/closeout.html
+++ b/views/closeout.html
@@ -9,10 +9,10 @@
       <div class="heading">Give us your raw site files and we close you out</div>
       <div class="content">
         <p>
-         No other company focuses as much on the close out process, and the advantages gained from this specialization keeps our clients on top of the expanding demands and shortened timelines their customers expect. It pays  off in bigger market share and improved cash-flow. Our C.O.P. management services are perfect for large volume projects with demanding timelines, and scale up and down with demand to augment your construction and project management resources as needed without commitment. 
+         No other company focuses as much on the close out process, our specialization keeps our clients on top of the expanding demands and shortened timelines their customers expect. It pays  off in bigger market share and improved cash-flow. Our C.O.P. management services are perfect for large volume projects with demanding timelines, and scale up and down with demand to augment your construction and project management resources as needed without commitment. 
         </p>
         <p>
-          Our close out management services come with a risk-free proposition. We offer your first package at no cost, we do this because we are committed to our clients taking less risk and having more to gain when they work with us than any other company or solution can offer.
+          Trying our close out management services comes with a simple proposition. If we don't bring data, clarity, structure, and ideas that you can see making you more profitable and happier then you have little to lose - we're even willing to offer the first site-project for free, but if we do deliver what we say is possible, then you have much more to gain.
         </p>
       </div>
     </div>
@@ -21,7 +21,7 @@
     <div class="section">
       <div class="heading">How can we lead across quality, speed, and cost?</div>
       <div class="content">
-        <span>Technology is how we provide the highest quality technical and construction input throughout the close out process while also leading in speed and cost. We do this through our use of Swift Traces™ and Swift Projects™, where we automate the processing of Anritsu sweep test data, and centralize project files and workflows into a GUI interface that's smart, and easy to use. We also create custom project specific scripts and applications that deal with data transfer between differently formatted data, for example we've automated AT&T's RET value forms, as well as the data entry of test values into Verizon Wireless' RF Summary in the Baltimore/Washington market. Our people, matched with this exceptional technological capability enables us to streamline the processing of high-amounts of data and close projects faster than anyone else.</span>
+        <span>Technology is changing the way we live. The networks we help build are paving the way for new applications and experiences. At Ontel, we create technology to help our clients take advantage of what is now possible. We've built Swift Projects, scripts for automating RET value forms, or the data entry for test values into RF Summaries. We've built Swift Traces, a program that automates sweep test processing and validation. Our people, matched with this exceptional technological capability enables us to streamline the processing of high-amounts of data and close projects faster.</span>
         <div class="feature-flex col-flex list-with-desc">
           <div>
             <div class="title">Benefits</div>
@@ -29,11 +29,11 @@
               <ul>
                 <li>
                   <i class="icon ion-checkmark"></i>
-                  <span>Our services get C.O.P.'s in fast, which helps you grow market share by signalling to the customer that you're ready and can handle more</span>
+                  <span>Our services get C.O.P.'s in fast and professionally, which helps you grow market share by signalling to the customer that you're ready to handle more</span>
                 </li>
                 <li>
                   <i class="icon ion-checkmark"></i>
-                  <span>Our customers improve cash-flow by reducing costs and time to invoice acceptance</span>
+                  <span>Our customers improve cash-flow by reducing costs and length of time to invoice acceptance</span>
                 </li>
               </ul>
             </div>
@@ -103,18 +103,19 @@
     <div class="section">
       <div class="heading">Common C.O.P. Deliverables</div>
       <div class="content">
-        <span>We check all deliverables for completeness and accuracy. We verify whenever possible against as-built data (photos, tests, etc) or the applicable spec document, and advise on common punch item issues. Included in our price is the typical mini-C.O.P. package many carriers expect on either the same day of construction completion or soon thereafter. For all of the elements below, we check for completeness, accuracy, and advise on quality related matters.</span>
+        <span>We check all deliverables for completeness and accuracy and build systems to structure the process so that high quality is consistently represented throughout high volumes of projects. We verify whenever possible against as-built data (photos, tests, etc) or the applicable spec document, and advise on common punch item issues and best practices. Included in our price is the typical mini-C.O.P. package many carriers expect on either the same day of construction completion or soon thereafter. Here are main items we manage:</span>
         <div class="feature-flex col-flex list-with-desc">
           <div>
             <div class="body">
               <ul>
-                <li>Fiber, Sweep, and PIM tests</li>
-                <li>RF design and construction drawing red-lines</li>
+                <li>Fiber, Sweep, and PIM test results</li>
+                <li>Photos</li>
                 <li>Carrier and LL specific forms related with the scope of work</li>
                 <li>Punch-item correction tracking and submittal</li>
-                <li>Height Verification report</li>
-                <li>Antenna Alignment Tool report</li>
+                <li>Height Verification form</li>
+                <li>Antenna Alignment Tool form</li>
                 <li>RET Screenshots and worksheet</li>
+				<li>RF design and construction drawing red-lines</li>
                 <li>Certifications for equipment and people</li>
                 <li>Jobsite safety documents (JSA/JHA)</li>
                 <li>Log Book entries</li>
@@ -132,7 +133,7 @@
       <div class="heading">Site Virtualization</div>
       <div class="content">
         <span>
-          As part of a close out for varying construction, scoping, or audit scopes of work, you may need a greater depth of documentation than your typical photo or video C.O.P. set, such as a drone flyover, photogrammetry, etc. We advise and help our clients meet these new demands, don't hesitate to ask about how to accommodate for these new types of requirements.
+          As part of a close out for varying construction, scoping, or audit scopes of work, you may need a greater depth of documentation than your typical photo or video C.O.P. set. This may include a drone audit, photogrammetry, etc. We advise and help our clients meet these new demands, don't hesitate to ask about how to accommodate for these new types of opportunities for you take advantage of as clients beging to utilize these types of services more as the cost to execute decreases.
         </span>
         <div class="feature-flex col-flex list-with-desc">
           <div>
