--- a/views/about.html
+++ b/views/about.html
@@ -6,13 +6,13 @@
   <div class="product-container">
     <div class="section intro">
       <div class="content">
-        Founded in 2013, Ontel is a Washington D.C. based software and management services company catering to telecommunication contractors, engineering firms, and project management companies. Our team consists of customer service oriented technicians, managers, and software developers with a breadth of skills and experiences across all areas of site development and implementation. Prior to Ontel, we led teams on behalf of the largest carriers and engineering firms to successfully deliver the latest telecommunication technologies across the U.S. 
+        Founded in August of 2013, Ontel is a Washington D.C. based LLC that provides software and management services to telecommunication contractors, engineering firms, real estate specialists, and project management companies. Our team consists of engineers, designers, technicians, and others that all collaborate to help our clients close projects better. To us, closing a project in the wireless industry is a reflection of the organization and how professionally it has operated as a whole, as such, we look at all of the aspects associated with closing well, like how people in the organization use tech, how is sharing done, who is technical etc. From there we leverage our resources and experience to help clients realize the next level.
       </div>
     </div>
     <div class="section">
       <div class="heading">Our mission: To empower the world with technology</div>
       <div class="content">
-        Helping to build networks that connect people is our passion. We are proud to provide software and services to help businesses and communities build the next-generation networks that help people communicate, collaborate, and live better.
+        Helping to build networks that connect people with the world is our passion. We are proud to provide software and services to help businesses and communities build the next generation of experiences which inspire people to share, build businesses, and live happier.
       </div>
     </div>
   </div>
