Main and MGMT text updates

--- a/views/mgmt.html
+++ b/views/mgmt.html
@@ -1,21 +1,21 @@
 <topnav></topnav>
 <div id="" ng-class="{'drop-active': drop}">
   <div class="product-header mgmt">
-    <div class="landing-text">MGMT Services</div>
+    <div class="landing-text">Management Services</div>
 	<div class="landing-text-sub">Telecommunication Site Development</div>
   </div>
   <div class="product-container">
     <div class="section intro">
       <div class="content">
-        New build to in building, overlay to backhaul, urban or remote, we've been a part of some of the coolest projects from Lihue to Long Island. Whatever your scope of work, if it involves getting a site from concept to on-air, we can help.
+        New-build to in-building, overlay to backhaul, urban or remote, we've been a part of some of the coolest projects from Lihue to Long Island. Whatever your scope of work is, if it involves getting a site from concept to on-air, we can help.
       </div>
     </div>
   </div>
   <div class="product-container">
     <div class="section">
-      <div class="heading">MGMT Services</div>
+      <div class="heading">Site Development Services</div>
       <div class="content">
-        <div style="">We help our clients with project and construction management for site development programs on telecommunication network build-outs through all its phases. If you're looking for a unique, and innovative partner to bring something new to the process, then we can be of particular help. We can't solve all the problems inherent with large ambitious projects, but most of them can be with better data management, software, and great people.</div>
+        <div style="">We help our clients with project and construction management for site development programs on telecommunication network build-outs throughout the program timeline. If you're looking for a unique, and innovative partner to bring something new to the process, then we can be of particular help. We don't claim to be able to solve all the problems inherent with large ambitious projects, but think most of them can be with better data management, software, and great people.</div>
         <div class="feature-flex testing-intro-list">
           <div>
             <div class="body">Site Dev from RF, RE, and CX - all phases.</div>
@@ -44,20 +44,20 @@
       <div class="heading">Why Ontel?</div>
       <div class="content feature-flex">
         <div>
-          <div class="title">We are here to help you make more money</div>
-          <div class="body">Decreased rejections, faster invoice acceptance, software, people, ideas, these are things your company can have at their disposal for fixed prices that are quoted up front when we work together</div>
+          <div class="title">Aligned Interests</div>
+          <div class="body">Our priorities are completely aligned, we don't make more when you make less</div>
         </div>
         <div>
-          <div class="title">Ingenuity</div>
-          <div class="body">Solutions-based problem solvers with 100% commitment to innovation and improvement</div>
+          <div class="title">Innovation</div>
+          <div class="body">We build great technology in-house, and put it to work for you</div>
         </div>
         <div>
-          <div class="title">Cost Savings</div>
-          <div class="body">Lower-cost alternative to recruitment, hiring, and on-boarding</div>
+          <div class="title">Simplicity</div>
+          <div class="body">As work comes in, we close it out for a fixed cost that doesn't change</div>
         </div>
         <div>
           <div class="title">Flexibility</div>
-          <div class="body">Fixed-price and retainer-based services that blend flexibility and cost</div>
+          <div class="body">Ramp-up and down instantly without recruitment, overhead, committment</div>
         </div>
       </div>
     </div>
