--- a/views/closeout.html
+++ b/views/closeout.html
@@ -12,7 +12,7 @@
          No other company focuses as much on the close out process, our specialization keeps our clients on top of the expanding demands and shortened timelines their customers expect. It pays  off in bigger market share and improved cash-flow. Our C.O.P. management services are perfect for large volume projects with demanding timelines, and scale up and down with demand to augment your construction and project management resources as needed without commitment. 
         </p>
         <p>
-          Trying our close out management services comes with a simple proposition. If we don't bring data, clarity, structure, and ideas that you can see making you more profitable and happier then you have little to lose - we're even willing to offer the first site-project for free, but if we do deliver what we say is possible, then you have much more to gain.
+          Trying our close out management services comes with a simple proposition, that we will bring data, clarity, structure, and ideas that can make you more profitable, and that you can try for free.
         </p>
       </div>
     </div>
