--- a/views/closeout.html
+++ b/views/closeout.html
@@ -19,9 +19,9 @@
   </div>
   <div class="product-container">
     <div class="section">
-      <div class="heading">How can we lead across quality, speed, and cost?</div>
+      <div class="heading">Cheaper, Faster, Better, at the same time</div>
       <div class="content">
-        <span>Technology is changing the way we live. The networks we help build are paving the way for new applications and experiences. At Ontel, we create technology to help our clients take advantage of what is now possible. We've built Swift Projects, scripts for automating RET value forms, or the data entry for test values into RF Summaries. We've built Swift Traces, a program that automates sweep test processing and validation. Our people, matched with this exceptional technological capability enables us to streamline the processing of high-amounts of data and close projects faster.</span>
+        <span>Technology enables us to do what wasn't possible, and with the convergence of LTE networks, and with better than ever hardware at accessible prices, we are witnessing the end of the old adage that you can't have cheaper, faster, and better all at once. To prove that, we've built Swift Projects, along with other tools and scripts that do things like automating ATT's RET value forms, or Verizon Wireless' RF Summary in the BAWA/DC market. We've also built Swift Traces, a program that automates sweep test processing and validation and does it all more accurately and faster than a human alone ever could. Our people, matched with this exceptional technological capability enables us to provide higher quality services, at higher rates, and less expensively.</span>
         <div class="feature-flex col-flex list-with-desc">
           <div>
             <div class="title">Benefits</div>
