--- a/views/closeout.html
+++ b/views/closeout.html
@@ -133,7 +133,7 @@
       <div class="heading">Site Virtualization</div>
       <div class="content">
         <span>
-          As part of a close out for varying construction, scoping, or audit scopes of work, you may need a greater depth of documentation than your typical photo or video C.O.P. set. This may include a drone audit, photogrammetry, etc. We advise and help our clients meet these new demands, don't hesitate to ask about how to accommodate for these new types of opportunities for you take advantage of as clients beging to utilize these types of services more as the cost to execute decreases.
+          As part of a close out for varying construction, scoping, or audit scopes of work, you may need a greater depth of documentation than your typical photo or video C.O.P. set can provide. This may include a drone audit, photogrammetry, pointclouds etc. We advise and help our clients perform these new types of services, so don't hesitate to ask us how to incorporate this into your portfolio and begin offering them to your clients.
         </span>
         <div class="feature-flex col-flex list-with-desc">
           <div>
