--- a/views/mgmt.html
+++ b/views/mgmt.html
@@ -15,10 +15,10 @@
     <div class="section">
       <div class="heading">Site Development Services</div>
       <div class="content">
-        <div style="">We help our clients with project and construction management for site development programs on telecommunication network build-outs throughout the program timeline. If you're looking for a unique, and innovative partner to bring something new to the process, then we can be of particular help. We don't claim to be able to solve all the problems inherent with large ambitious projects, but think most of them can be with better data management, software, and great people.</div>
+        <div style="">If you are looking for a unique, and innovative partner to bring something new to the process, then we can be of particular help. Our use of technology is really what stands us apart from others, and while we would like it to automate and solve all the problems inherent with large, ambitious projects, we are happy with it solving enough of them to make our clients leaders, and having great people handle the rest. </div>
         <div class="feature-flex testing-intro-list">
           <div>
-            <div class="body">Site Dev from RF, RE, and CX - all phases.</div>
+            <div class="body">Management throughout design and implementation</div>
           </div>
           <div>
             <div class="body">Site scope and BOM development</div>
