--- a/views/pricing.html
+++ b/views/pricing.html
@@ -48,7 +48,7 @@
     <div class="section">
       <div class="heading">Quoted Prices</div>
       <div class="content">
-        The amount of services we provide, along with factors such as project specific requirements, and scheduling could lead to discounts or additional charges which we will discuss based on project setup.
+        We quote all site development and implementation services, and may revise the above software and close out management pricing based on volume, special requirements, or other factors that we will work together with you to identify and finalize as considerations arise.
       </div>
     </div>
   </div>
