main landing sub test

--- a/views/main.html
+++ b/views/main.html
@@ -21,6 +21,7 @@
                 </div>
                 <div>
                     <div>Software</div>
+					<div>For Telecommunication Site Development</div>
                 </div>
             </div>
         </div>
