--- a/views/main.html
+++ b/views/main.html
@@ -21,8 +21,10 @@
                 </div>
                 <div>
                     <div>Software</div>
-					<div>For Telecommunication Site Development</div>
                 </div>
+				
+			<div class="landing-subtext ">
+				<div>For Telecommunication Site Development</div>
             </div>
         </div>
     </section>
