Main landing sub fix

--- a/views/main.html
+++ b/views/main.html
@@ -24,7 +24,9 @@
                 </div>
 				
 			<div class="landing-subtext ">
-				<div>For Telecommunication Site Development</div>
+				<div>
+					<div>For Telecommunication Site Development</div>
+				</div>
             </div>
         </div>
     </section>
