--- a/views/swift.html
+++ b/views/swift.html
@@ -2,7 +2,7 @@
 <div id="" ng-class="{'drop-active': drop}" data-sr-container>
   <div class="product-header swift">
     <div class="landing-text">Swift Projects</div>
-    <div class="landing-text-sub">A Mobile-Centric Project Management Platform</div>
+    <div class="landing-text-sub">Massively Mobile Management</div>
     <!--<div class="video-container">-->
       <!--<video autoplay loop class="fillWidth" id="ontelbg">-->
         <!--<source src="https://s3.amazonaws.com/bcm-static/static/encoded/r2-1080p/winter_one.mp4" type="video/mp4" />-->
@@ -13,11 +13,11 @@
     <div class="section intro">
       <div class="heading">Make How You Think Into a System</div>
 		<div class="content">
-			<p>Swift Projects puts the power to design, run, and close wireless projects into the palm of your hand. With a phone or browser, Swift enables you to design detailed project workflows with 3 simple building blocks. Those blocks then automate administrative and management tasks like status updates, scheduling, uploading and downloading, and relabelling files. Most importantly for our clients, Swift Projects eliminates mistakes and waste related with sharing and collaborating ineffectively
+			<p>Swift Projects puts the power to design, run, and close wireless projects into the palm of your hand. With a phone or browser, Swift enables you to design detailed project workflows with 3 simple building blocks. Those blocks then automate administrative and management tasks like status updates, scheduling, uploading and downloading, and relabelling files. Most importantly for our clients, Swift Projects eliminates mistakes and waste related with sharing and collaborating ineffectively so there's less go-backs, rejections, and time until you get paid.
 			<p>
 		</div>
 		<div class="content">
-			<p>One of the main ways we do this is to make it simple to take photos and videos from the field and put them directly into the QA approval process live. There's so much more that we've packed into it, but at the end of the day, it's simple enough to set up and customize in a couple of hours a system that could completely change the way you think about running your projects and managing your resources. Give it a try, we'd be happy to assist with you setting up and running a pilot project within your organization to see if it's the right fit for your team.
+			<p>We are so confident that after you try Swift Projects that you will use again to help your company close better, faster, and cheaper that we offer your first month, and a complimentary consultation on your toughest project for free.
 			<p>
 		</div>
       <a class="get-started" href="https://swiftprojects.io">
@@ -47,7 +47,7 @@
       <div class="content feature-flex">
         <div>
           <div class="title">Live Approvals</div>
-          <div class="body">QA completed work live and reject/approve as necessary to prevent return visits and boost quality</div>
+          <div class="body">QA completed work live and reject or approve as necessary to prevent return visits and close instantly</div>
         </div>
         <div>
           <div class="title">Automatic Tracking</div>
@@ -62,11 +62,11 @@
       <div class="content feature-flex">
         <div>
           <div class="title">Templates</div>
-          <div class="body">Design workflow templates to automate the management of anything from huge telecom projects to new-hire processes</div>
+          <div class="body">Design workflow templates to automate the management of any project with as little as your phone and a moment of time</div>
         </div>
         <div>
           <div class="title">Simplicity</div>
-          <div class="body">Created with all users in mind - you shouldn't need to be a techie to engage with sophisticated tools and structures</div>
+          <div class="body">If you can create a list, we can turn you into a workflow automation engineer</div>
         </div>
       </div>
     </div>
@@ -100,7 +100,7 @@
       <div class="content feature-flex">
         <div>
           <div class="title">Annotate</div>
-          <div class="body">With our on-topic messaging, there’s less searching through messages and more getting the info you need quickly</div>
+          <div class="body">With our on-topic messaging, you know exactly where conversations are when you need them</div>
         </div>
         <div>
           <div class="title">Callouts</div>
@@ -119,7 +119,7 @@
         </div>
         <div>
           <div class="title">Power Tools</div>
-          <div class="body">Clone, export, and import mass changes from CSV (Excel), enabling users to adapt on the fly and save time</div>
+          <div class="body">Data tags, forms, import and export with Excel, template cloning, calendar, priority list, activity feeds, and more </div>
         </div>
       </div>
     </div>
@@ -130,11 +130,11 @@
       <div class="content feature-flex">
         <div>
           <div class="title">Automate File Management</div>
-          <div class="body">Create smart file requirements that automate the tracking of files and their statuses</div>
+          <div class="body">Create smart file requirements that automate the management of every photo, file, and document, while securing and backing up your data</div>
         </div>
         <div>
           <div class="title">Smarter Lists</div>
-          <div class="body">Manage how you get through your workflow with search and smart filters that adapt to changes live</div>
+          <div class="body">Live search with schedule and status based filtering keeps your view focused on your priorities easily</div>
         </div>
       </div>
     </div>
@@ -149,7 +149,7 @@
         </div>
         <div>
           <div class="title">Home Screen</div>
-          <div class="body">Your tasks and others that you care about collected in one spot, displayed with the latest status in one simple list</div>
+          <div class="body">Your tasks and others that you care about collected in one spot, displayed with the latest status and schedule in one simple list</div>
         </div>
       </div>
     </div>
