--- a/views/pricing.html
+++ b/views/pricing.html
@@ -48,7 +48,7 @@
     <div class="section">
       <div class="heading">Quoted Prices</div>
       <div class="content">
-        We quote all site development and implementation services, and may revise the above software and close out management pricing based on volume, special requirements, or other factors that we will work together with you to identify and finalize as considerations arise.
+        We quote all site development and implementation services as detailed on our MGMT solutions page.
       </div>
     </div>
   </div>
