--- a/views/about.html
+++ b/views/about.html
@@ -6,15 +6,15 @@
   <div class="product-container">
     <div class="section intro">
       <div class="content">
-        Founded in August of 2013, Ontel is a Washington D.C. based LLC that provides software and management services to telecommunication contractors, engineering firms, real estate specialists, and project management companies. Our team mostly consists of engineers, designers, technicians, and implementation managers. We specialize in applying technology to project and construction management, so we are interested in how people in the field and office use tech to collaborate, what devices and services they use and why, the challenges to innovation within organizations, and other interests in this vein. 
+        Founded in August of 2013, Ontel is a Washington D.C. based LLC that provides software and site-development related management services to telecommunication contractors, engineering firms, real estate specialists, and project management companies. Our team mostly consists of engineers, designers, technicians, and implementation managers. We specialize in applying technology to project and construction management, so we are interested in how people whether in the field or office use technology to colloborate, and bringing the best of these efforts from the world to our clients.  
 		
-		Prior to Ontel, we've led sales, operations, and innovation within companies ranging from small start-up general contractors, all the way to the largest telecommunication engineering companies in the world. Along the way, we've built sites for every major carrier in the U.S. for the past 10 years. All of this gives us the experience necessary to help our clients pragmattically implement innovation into their business. Feel free to reach out to us about opportunities, questions, support, and to see how we do things differently from our peers to get to the same goals better.
+		Prior to Ontel, we've led sales, operations, and business development within companies ranging from small start up general contractors, to the largest telecommunication engineering companies in the world. Our experience, matched with our obsession to innovate combines into our ability to offer better solutions to our clients at low, fixed costs.
       </div>
     </div>
     <div class="section">
       <div class="heading">Our mission: To empower the world with technology</div>
       <div class="content">
-        Helping to build networks that connect people with the world around them is our passion. We are proud to provide software and services to help businesses and communities build new experiences and applications which inspire people to share better, live more harmoniously with the environment, and be happier.
+        Helping to build networks that connect people with the world around them is our passion. We are proud to provide software and services that provide the infrastructure necessary for businesses and communities to build new experiences and applications which inspire people to create the future.
       </div>
     </div>
   </div>
