--- a/views/swift.html
+++ b/views/swift.html
@@ -17,7 +17,7 @@
 			<p>
 		</div>
 		<div class="content">
-			<p>We are so confident that after you try Swift Projects that you will use again to help your company close better, faster, and cheaper that we offer your first month, and a complimentary consultation on your toughest project for free.
+			<p>We are so confident that we can close projects better, faster, and cheaper than any other solution, that we are offering a month, and a complimentary consultation on your toughest project for free.
 			<p>
 		</div>
       <a class="get-started" href="https://swiftprojects.io">
