--- a/views/closeout.html
+++ b/views/closeout.html
@@ -43,7 +43,7 @@
             <div class="body">
               <ul>
                 <li>Ontel has less than a 5% rejection rate for 2014-2016 on over 1500+ site projects, this includes rejections due to undocumented requirements </li>
-                <li>We close out over 90% of our sites within 24 calendar hours of receiving raw files, this includes clients that do not us Swift Projects for photo management</li>
+                <li>We close out over 90% of our sites within 24 calendar hours of receiving raw files, this includes clients that do not use Swift Projects for photo management</li>
               </ul>
             </div>
           </div>
